--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 
   </head>
   <body class="min-h-screen max-w-md bg-base-200 mx-auto">
-    <header class=" border-b-2 border-gray-300">
+    <header class=" border-b-2 border-gray-300 sticky top-0 bg-base-200 z-10">
         <section class="w-11/12 mx-auto flex items-center justify-between py-4">
             <div class="left flex gap-1 items-center">
                 <div class="w-[60px]">
@@ -96,6 +96,8 @@
     </div>
     </section>
     <script src="javascript/cashout.js"></script>
+
+    <script src="javascript/machine.js"></script>
 
     
   </body>
