--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
         <section class="w-11/12 mx-auto flex items-center justify-between py-4">
             <div class="left flex gap-1 items-center">
                 <div class="w-[60px]">
-                    <img src="assets/Logo.png" alt="Payoo Logo" class="">
+                    <img src="assets/logo.png" alt="Payoo Logo" class="">
                 </div>
                 <div class="balance Info">
                     <h2 class="text-2xl font-bold"> $<span id="balance">45000</span></h2>
