--- a/home.html
+++ b/home.html
@@ -26,8 +26,8 @@
     <header class=" border-b-2 border-gray-300 sticky top-0 bg-base-200 z-10">
         <section class="w-11/12 mx-auto flex items-center justify-between py-4">
             <div class="left flex gap-1 items-center">
-                <div class="w-[60px]">
-                    <img src="/assets/logo.png" alt="Payoo Logo" class="">
+                <div class="">
+                    <img src="/assets/logo.png" alt="Payoo Logo" class="w-[60px]">
                 </div>
                 <div class="balance Info">
                     <h2 class="text-2xl font-bold"> $<span id="balance">45000</span></h2>
